<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TRAMO</string>
    <string name="ingreseContrasena">Ingrese su contraseña</string>
    <string name="ingreseUsuario">Ingrese su correo</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrate">Registrate</string>
    <string name="bienvenidaConductor">Bienvenido a Tramo Señor Conductor</string>
    <string name="registroConductor">Apartir de este momento empezara su registro como Conductor</string>
    <string name="fotoPerfil">Por favor añada una foto de perfil</string>
    <string name="no_obligatorio">No obligatorio</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="title_activity_driver_register_five">ActivityDriverRegisterFive</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="datos_vehiculo">Datos del vehiculo</string>
    <string name="numeroLicencia">Numero de licencia de transito del vehiculo</string>
    <string name="IngreseSOAT">Numero de seguro obligatorio SOAT</string>
    <string name="CompaniaSeguro">Ingrese la compañia del Seguro</string>
    <string name="VencimientoSOAT">Ingrese la fecha de vencimiento del SOAT</string>
    <string name="PolizaResponsabilidad">Poliza de responsabilidad Civil Contractual</string>
    <string name="RevisionTecnicomecanica">Numero de revision Tecnicomecanica</string>
    <string name="VencimientoTecnomecanica">Fecha de vencimiento de TecnoMecanica</string>
    <string name="terminar_registro">Terminar Registro</string>
    <string name="fotografiasVehiculo">Fotografias del vehiculo</string>
    <string name="senorConductor">Señor Conductor</string>
    <string name="VALIDATION">En unas horas ya seras parte de TRAMO Tenemos que verificar que tus datos sean validos.</string>
    <string name="VALIDATION2">Nos comunicaremos contigo una vez validemos los datos \n \n Despues ya podras iniciar sesión</string>
    <string name="terminarRegistro">TERMINAR REGISTRO</string>
    <string name="terminosYcondicones">Al registrarse, acepta los Términos de servicio de TRAMO y política de privacidad.</string>
    <string name="menu_home">Solucitud de servicio</string>
    <string name="Historial">Historial de viajes</string>
    <string name="configuraciones">Configuracion</string>
    <string name="elija_su_fecha_para_el_viaje">Elija su fecha para el viaje</string>
    <string name="pqrs">PQRS</string>
    <string name="Perfil">Perfil</string>
    <string name="enviar_datos">Enviar Datos</string>
    <string name="solicitud_de_servicio_para_despues">Solicitud de servicio para despues</string>
    <string name="numero_identificacion">Numero identificacion</string>
    <string name="registro_conductor">Registro Conductor</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion_residencia">Direccion residencia</string>
    <string name="ciudad">Ciudad</string>
    <string name="numero_telefonico">Numero Telefonico</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="datos_posedor_tenedor_vehiculoo">Datos del poseedor o tenedor del vehículo</string>
    <string name="ingrese_numero_identificacion">Ingrese su numero de identificación</string>
    <string name="ingrese_numero_telefono">Ingrese su numero de telefono</string>
    <string name="ingrese_ciudad">Ingrese su ciudad</string>
    <string name="ingrese_sus_nombres">Ingrese sus nombres</string>
    <string name="ingrese_sus_apellidos">ingrese sus apellidos</string>
    <string name="ingrese_direccion_residencia">Ingrese su dirección de residencia</string>
</resources>