<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBackground"
    tools:context=".clientLauncher.fragmentsClients.realizarPedido.ActivityClientBookOrder">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGoActivityClientConductorLaunchOne"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/solicitud_de_servicio_para_despues"
        app:titleTextColor="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/tramo">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elija_su_fecha_para_el_viaje"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_gravity="center">
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitButton"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryWeb"
        android:text="@string/enviar_datos" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>